# Shopping-assist

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  pactkit.yaml
docs/architecture/governance/: lessons.md  rules.md
docs/architecture/graphs/: call_graph.mmd  class_graph.mmd  code_graph.mmd  system_design.mmd
docs/product/: context.md  prd.md  sprint_board.md
docs/specs/: STORY-001.md  STORY-002.md  STORY-003.md  STORY-004.md  STORY-005.md  STORY-006.md  STORY-007.md  STORY-008.md  STORY-009.md  STORY-010.md  STORY-011.md
docs/test_cases/: STORY-001_case.md  STORY-002_case.md  STORY-003_case.md  STORY-004_case.md  STORY-005_case.md  STORY-006_case.md  STORY-007_case.md  STORY-008_case.md  STORY-009_case.md  STORY-010_case.md  STORY-011_case.md
scripts/: browser_login.py  login_helper.py  start_chrome.sh  verify_search.py
src/: app.py  config.py  database.py  models.py
src/ocr/: ingredient_parser.py  service.py
src/scraper/: browser.py  jd.py  parser.py  platform.py  tb.py  tb_parser.py
src/services/: ingredient_knowledge.py  rate_limiter.py  search.py
src/templates/: base.html  favorites.html  index.html  price_history.html  results.html  rules.html
tests/e2e/api/: test_STORY_001.py
tests/unit/: test_browser_manager.py  test_ingredient_knowledge.py  test_ingredient_rules.py  test_models.py  test_ocr.py  test_parser.py  test_platform_adapter.py  test_rate_limiter.py  test_security_fixes.py  test_sorting.py  test_tb_scraper.py
