[project]
name = "shopping-assist"
version = "0.0.1"
description = "跨电商平台商品配料表智能查询与比价工具"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "playwright>=1.49.0",
    "playwright-stealth>=1.0.6",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]
